[package]
name = "gnudbm"
version = "0.1.1"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Ergonomic bindings for gdbm"
categories = ["database", "external-ffi-bindings"]
repository = "https://github.com/cmyr/gnudbm.git"
license = "MIT"

[dependencies]
libc = "0.2"
serde = "1.0"
bincode = "1.0"

[build-dependencies]
bindgen = "0.26.3"

[dev-dependencies]
tempdir = "0.3.5"
serde_derive = "1.0"
