[package]
name = "gnudbm"
version = "0.2.4"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Ergonomic bindings for gdbm"
categories = ["database", "external-ffi-bindings"]
repository = "https://github.com/cmyr/gnudbm.git"
license = "MIT"

[features]
system-gdbm = []

[dependencies]
libc = "0.2"
serde = "1.0"
bincode = "1.0"

[dev-dependencies]
tempdir = "0.3.5"
serde_derive = "1.0"
